# voxaos

./: .gitignore  README.md  main.py  pyproject.toml  setup.sh
config/: default.toml
core/: config.py  context.py  orchestrator.py  types.py
docs/: CLAUDE.md  DEMO_SCRIPT.md  PLAN.md
docs/tasks/: 01-project-skeleton.md  02-llm-client.md  03-tool-executor.md  04-skills-system.md  05-memory-system.md  06-orchestrator.md  07-voice-pipeline.md  08-fastapi-server.md  09-browser-ui.md  10-integration-polish.md  README.md
llm/: client.py  prompts.py  tools.py
memory/: __init__.py  capture.py  learning.py  types.py
server/: app.py  audio_handler.py
skills/: deploy.md  file-ops.md  home-assistant.md  loader.py  project-setup.md  selector.py  self-demo.md  system-debug.md  web-research.md
tests/: conftest.py  test_config.py  test_llm.py  test_memory.py  test_orchestrator.py  test_server.py  test_skills.py  test_tools.py  test_voice.py
tools/: __init__.py  executor.py  filesystem.py  home_assistant.py  launcher.py  process.py  shell.py  web_search.py
ui/: app.js  index.html  style.css
voice/: pipeline.py  stt.py  tts.py  vad.py
