[project]
name = "voxaos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Server
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # LLM (openai SDK works for both vLLM local and Mistral API)
    "openai>=1.0",
    "mistralai>=1.0",
    # Voice
    "numpy>=1.26",
    "soundfile>=0.12",
    # Tools
    "duckduckgo-search>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "psutil>=5.9",
    "aiofiles>=23.0",
    # Memory
    "mem0ai>=0.1",
    "qdrant-client>=1.7",
    # Config
    "pydantic>=2.0",
    "tomli>=2.0",
    # Skills
    "pyyaml>=6.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]

[project.optional-dependencies]
local = [
    "torch>=2.0",
    "transformers>=4.40",
    "nemo_toolkit[tts]",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "types-pyyaml",
    "types-psutil",
    "types-beautifulsoup4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "types-aiofiles>=25.1.0.20251011",
]
